<resources>
    <string name="app_name">Project</string>
    <string name="title_activity_maps">LetsHangOut</string>

    <string name="action_settings">Settings</string>
    <string name="login">LOGIN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="not_registered">Not Registered?</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_registered">Already Registered?</string>
    <string name="welcome_user">Welcome User</string>
    <string name="email_registration">Email Registration</string>
    <string name="prompt_email">Email</string>
    <string name="sign_in">Sign In</string>
    <string name="collection_users">Users</string>
    <string name="email">Email</string>
    <string name="collection_user_locations">User Locations</string>

</resources>
